Font issue resolve & Title Update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="../../../1RNNogebIvf2.com/vue-static/landings/line-awesome/line-awesome/0ICHygvu91fH.0/css/QNV014N1Vgxv.css">
+    <link rel="stylesheet" href="assets/css/line-awesome.min.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
@@ -38,7 +38,7 @@
         <span class="bar"></span>
     </span>
 
-    <div class="global-color">
+    <!-- <div class="global-color">
         <span class="setting-toggle">
             <i class="las la-cog"></i>
         </span>
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="responsive-sidebar-menu">
         <div class="overlay"></div>
@@ -187,14 +187,14 @@
     </ul>
 
     <div class="left-sidebar">
-        <div class="sidebar-header d-flex align-items-center justify-content-between">
+        <div class="sidebar-header d-flex align-items-center justify-content-center">
             <img src="assets/images/logo.png" alt="Logo">
-            <span class="designation">Framer Designer &amp; Developer</span>
+            <!-- <span class="designation">WordPress/Shopify Developer</span> -->
         </div>
         <img class="me" src="assets/images/me.jpg" alt="Me">
-        <h2 class="email">hello@drake.design</h2>
-        <h2 class="address">Base in Los Angeles, CA</h2>
-        <p class="copyright">© 2022 Drake. All Rights Reserved</p>
+        <h2 class="email">siraj2544@gmail.com</h2>
+        <h2 class="address">Karachi</h2>
+        <!-- <p class="copyright">© 2024 muhammadsirajkhan. All Rights Reserved</p> -->
         <ul class="social-profile d-flex align-items-center flex-wrap justify-content-center">
             <li>
                 <a href=""><i class="lab la-twitter"></i></a>
@@ -254,7 +254,8 @@
                                 <h4 class="subtitle scroll-animation" data-animation="fade_from_bottom">
                                     <i class="las la-home"></i> Introduce
                                 </h4>
-                                <h1 class="scroll-animation" data-animation="fade_from_bottom">Say Hi from <span>Drake</span>, Framer Designer and Developer</h1>
+                                <!-- <h1 class="scroll-animation" data-animation="fade_from_bottom">Say Hi from <span>Drake</span>, Framer Designer and Developer</h1> -->
+                                <h1 class="scroll-animation" data-animation="fade_from_bottom">Hello from <span>Siraj Khan</span>: Crafting Digital Success with Expert WordPress & Shopify Development Services</h1>
                             </div>
                             <p class="scroll-animation" data-animation="fade_from_bottom">I design and code beautifully simple things and i love what i do. Just simple like that!</p>
                             <a href="#portfolio" class="go-to-project-btn scroll-to scroll-animation" data-animation="rotate_up">
@@ -264,12 +265,12 @@
         
                             <div class="facts d-flex">
                                 <div class="left scroll-animation" data-animation="fade_from_left">
-                                    <h1>10+</h1>
+                                    <h1>5+</h1>
                                     <p>Years of <br>Experience</p>
                                 </div>
                                 <div class="right scroll-animation" data-animation="fade_from_right">
                                     <h1>182+</h1>
-                                    <p>projects completed on <br>15 countries</p>
+                                    <p>projects <br>Completed</p>
                                 </div>
                             </div>
                         </div>
